# LLM_Memory

./: .coverage  .gitignore  QUICKSTART_DASHBOARD.md  README.md  benchmark_viz.py  pyproject.toml  requirements.txt  run_agent.py  run_benchmark_ui.py  run_locomo_ui.py  run_longmemeval.py  test_viz.py
agent_memory_v4/: checkpoints.sqlite-shm  checkpoints.sqlite-wal  default_v4.db
benchmark_mem_v4/: bench_conv-26_v4.db  bench_conv-30_v4.db  bench_conv-41_v4.db  bench_conv-42_v4.db  bench_conv-43_v4.db
benchmark_viz_memory/: benchmark_viz_v4.db
benchmarks/: LONGMEMEVAL.md  README.md  VISUALIZATION_GUIDE.md  __init__.py  benchmark_memory.py  compare_v4_v5.py  compare_v5_mem0.py  locomo_benchmark.py  locomo_v3.py  locomo_v4.py  longmemeval_benchmark.py  longmemeval_viz.py  longmemeval_viz_enhanced.py  metrics.py  report.py  runner.py  scenarios.py
benchmarks/reports/: LLM-Memory (gemma3:27b)_20260121_141725.json  LLM-Memory (gemma3:27b)_20260121_141725.md  LLM-Memory (gemma3:27b)_20260121_141756.json  LLM-Memory (gemma3:27b)_20260121_141756.md  LLM-Memory (gemma3:27b)_20260121_152621.json  LLM-Memory (gemma3:27b)_20260121_152621.md  LLM-Memory (gemma3:27b)_20260121_153846.json  LLM-Memory (gemma3:27b)_20260121_153846.md  LLM-Memory (gemma3:27b)_20260121_154816.json  LLM-Memory (gemma3:27b)_20260121_154816.md  Simple Baseline_20260121_141531.json  Simple Baseline_20260121_141531.md  Simple Baseline_20260121_141816.json  Simple Baseline_20260121_141816.md  locomo_results_1768992399.json  locomo_v3_20260130_130724.json  locomo_v3_20260130_130833.json  locomo_v3_20260130_132032.json  locomo_v3_20260130_144124.json  locomo_v3_20260130_150417.json  locomo_v3_20260130_151028.json  locomo_v3_20260130_151804.json  locomo_v3_20260130_152430.json  locomo_v4_20260130_154004.json  locomo_v4_20260130_154745.json  locomo_v4_20260130_155941.json  locomo_v4_20260130_160637.json  locomo_v4_20260201_025407.json  locomo_v4_20260201_141509.json
benchmarks/templates/: longmemeval_dashboard_enhanced.html
examples/: advanced_usage.py  agent_chat.py  basic_usage.py  multi_agent_demo.py
flask_agent_memory/: flask_user.db
llm_memory/: __init__.py  config.py
llm_memory/agent/: __init__.py  cli.py  tools.py  (+2 more)
tests/: __init__.py  conftest.py  test_api.py  test_conflict.py  test_consolidation.py  test_decay.py  test_encoding.py  test_models.py  test_retrieval.py  test_storage.py
ui_agent_memory/: ui_user.db
(+96 files in other folders)
